# Research-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  main.py  scheduler.py
backend/app/agent/: blocked_domains.py  company_resolver.py  dedup_agent.py  dedup_service.py  queries.py  (+11 more)
backend/scripts/: backfill_countries.py  backfill_source_published_dates.py  count_agricultural_footprints.py  generate_search_anchors.py  rematch_projects.py  sandbox_rhone_include_domains.py  smoke_test.py  translate_projects_to_english.py
backend/tests/: conftest.py  test_address_dedup.py  test_amazon_colombier_dedup.py  test_article_skipped.py  test_blocked_domains.py  test_company_resolver.py  test_config_api.py  test_cross_department_import.py  test_dedup_agent.py  test_dedup_country_filter.py  test_dedup_service.py  test_deduplication.py  test_department_resolution.py  test_departments.py  test_entreprise_client.py  test_exa_client.py  test_gis_footprints.py  test_known_urls.py  test_local_press_loader.py  test_locale_filter.py  test_merge_api.py  test_models.py  test_pipeline_dedup_scope.py  test_pipeline_prefilter.py  test_pipeline_siren.py  test_pipeline_test_mode.py  test_prefiltered_persistence.py  test_project_backfill.py  test_projects_api.py  test_published_date_presets.py  test_queries.py  test_run_steps.py  test_runs_api.py  test_scheduler.py  test_search_anchors.py  test_search_anchors_api.py  test_search_anchors_loader.py  test_source_published_date_backfill.py  test_url_prefilter.py  test_user_reported_dedup.py  (+1 more)
(+108 files in other folders)
